# scrig

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
include/scrig/: config.hpp  consensus.hpp  crypto_platform.hpp  json.hpp  miner.hpp  net_platform.hpp  node_client.hpp  perf.hpp  perf_platform.hpp  platform.hpp  runtime_platform.hpp  stratum_client.hpp  types.hpp  ui.hpp
src/: config.cpp  crypto.cpp  json.cpp  main.cpp  miner.cpp  node_client.cpp  perf.cpp  stratum_client.cpp  types.cpp  ui.cpp
src/codec/: bincode2.hpp
src/linux/: crypto_platform.cpp  net_platform.cpp  perf_platform.cpp  platform.cpp  runtime_platform.cpp
src/macos/: crypto_platform.cpp  perf_platform.cpp  platform.cpp
src/net/: framed_tcp.cpp  framed_tcp.hpp  socket.cpp  socket.hpp
src/platform/: net_platform.cpp  perf_platform.cpp  platform.cpp  runtime_platform.cpp
src/protocol/: address_inclusion_filter.hpp  bincode_encode.hpp  block.hpp  hash.hpp  hashing_buffer.cpp  hashing_buffer.hpp  keys.hpp  transaction.hpp
src/rx/: randomx_wrap.cpp  randomx_wrap.hpp
src/snap/: api.cpp  api.hpp  base36.cpp  base36.hpp  config.cpp  config.hpp  requests.cpp  requests.hpp  types.cpp  types.hpp  util.cpp  util.hpp
src/util/: bytes.cpp  bytes.hpp  time.cpp  time.hpp
src/windows/: crypto_platform.cpp  net_platform.cpp  perf_platform.cpp  platform.cpp  runtime_platform.cpp
